--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,15 @@ h1{
     margin-left: auto;
     margin-right: auto;
 }
+
+.tm-social{
+    width: 40px;
+    height: 40px;
+}
+
+.mb-50{
+    margin-bottom: 50px;
+}
+.ml-50{
+    margin-left: 50px;
+}
